Bug 32570 - Default Array Constant separator doesn't works with language using comma as decimal separator
Summary: Default Array Constant separator doesn't works with language using comma as d...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 RC1
Hardware: x86 (IA32) Windows (All)
: medium critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-22 00:27 UTC by GerardF
Modified: 2011-01-16 23:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GerardF 2010-12-22 00:27:32 UTC
Configuration : 
LibreOffice 3.3.0 
OOO330m17 (Build:3)
libreoffice-build 3.3.0.1
on Windows Vista.

Step to reproduce :
Use French langpack or choose French in Locale settings.
Decimal separator key : same as locale setting (,)

In LibreOffice Calc > Formula, default array column separator is . (point)

In cell A1, enter ={1.2.3} press ctrl+shift+enter
cell displays Err 512.

Select A1:A3, enter ={1.2.3} press ctrl+shift+enter
cells displays Err 512.

Save and close the file. Open again :
Cells displays expected result.

Workarround :
Replace . by | in options. ={1|2|3} works fine.

Help needed to be changed. (same as OOo)
Comment 1 Jan Holesovsky 2010-12-22 02:17:29 UTC
Kohei: Is there anything else needed than the help change, please?
Comment 2 pierre-yves samyn 2010-12-22 07:44:59 UTC
Hello

I confirm with XP SP3

(In reply to comment #1)
> Kohei: Is there anything else needed than the help change, please?

Avoid the Err 512 would be greatly appreciated ... :)

Best regards
Comment 3 Kohei Yoshida 2010-12-22 08:09:35 UTC
I'll take this.  I bet somewhere in the interpreter there is a hard-coded '.'.
Comment 4 Kohei Yoshida 2010-12-23 09:23:01 UTC
Ok.  I fixed it on master.  The formula compiler was checking for a number followed by a '.', and throwing an error because we don't support unquoted numbers as sheet names (e.g. 100.A1 instead of '100'.A1 where the 100 is a sheet name).  And there, the '.' was hard-coded.

http://cgit.freedesktop.org/libreoffice/calc/commit/?id=98764831e3b6c02d7630c61a6c389ce4318787bd

I removed this check since we already automatically quote numerical sheet names anyway, so this check is totally unnecessary not to mention it breaks in-line arrays.  Plus, the sheet-to-ref separator is not always a '.'; in Excel A1 and R1C1 mode, '!' is used as the separator, so this check makes no sense.
Comment 5 Kohei Yoshida 2011-01-03 07:19:46 UTC
FYI, Kendy has ported this fix to 3.3.
Comment 6 sophie 2011-01-16 23:03:28 UTC
Verified - Closed - Sophie