Remove bogus check for numerical sheet names. (fdo#32570)

We apparently put numerical sheet name into quotes somewhere else,
so checking for a number followed by a '.' and flagging it as bad
is not only necessary, it's not appropriate.  E.g. we do support
other formula syntax where the sheet-to-reference separator is not
'.' (Excel A1 and Excel R1C1), thereby making this test even more
inappropriate.